fix something for blog

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                     <div class="blog-post-card glass-card animate-on-scroll">
                         <a href="post-unity-githubpages.html" class="blog-card-image-link">
                             <div class="blog-card-image">
-                                <img src="assets/placeholder-600x400.png" alt="Unity logo and GitHub logo">
+                                <img src="assets/unity-githubpage.png" alt="Unity logo and GitHub logo">
                             </div>
                         </a>
                         <div class="blog-card-content">
@@ -651,53 +651,8 @@
     </main>
         
     </main>
-    <footer class="main-footer">
-        <div class="container footer-container">
-            <div class="footer-column footer-about">
-                <h3 class="footer-logo"><span>tranhuudat</span>2004</h3>
-                <p>A passionate Web Developer dedicated to building beautiful and useful applications.</p>
-            </div>
-            <div class="footer-column footer-links">
-                <h4 class="footer-title">Quick Links</h4>
-                <ul>
-                    <li><a href="#hero">Home</a></li>
-                    <li><a href="assets/resume.pdf" download>Resume</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-column footer-connect">
-                <h4 class="footer-title">Connect with Me</h4>
-                <ul>
-                    <li><a href="https://github.com/TranHuuDat2004" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
-                    <li><a href="https://linkedin.com/in/tranhuudat2004" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a></li>
-                    <li><a href="mailto:tranhuudat.cv@gmail.com"><i class="fas fa-envelope"></i> Email</a></li>
-                </ul>
-            </div>
-
-            <!-- Cột 4: Themes -->
-            <div class="footer-column footer-themes">
-                <h4 class="footer-title">Themes</h4>
-                <div class="theme-switcher-dropdown">
-                    <button class="dropdown-toggle">Themes <i class="fas fa-chevron-down"></i></button>
-                    <div class="dropdown-menu">
-                        <a href="index.html">Default</a>
-                        <a href="birthday.html">Birthday</a>
-                        <a href="noel.html">Noel</a>
-                        <a href="halloween.html">Halloween</a>
-                        <a href="tet.html">Tết</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-                <p>Copyright © <span id="currentYear"></span> Trần Hữu Đạt. All rights reserved.</p>
-                <p>Last updated: <b> October 14th 2025</b></p>
-            </div>
-        </div>
-    </footer>
-
+<footer class="main-footer" id="footer-placeholder"></footer>
+<script src="js/load-components.js"></script>
     <audio id="audio-source"></audio>
     <script src="js/playlist.js"></script>
     <script src="js/scripts.js"></script>
