fix download resume

--- a/download-resume.html
+++ b/download-resume.html
@@ -87,7 +87,7 @@
                         </div>
                         <p class="download-desc">A concise, one-page version focusing on key skills and standout projects. Ideal for a quick overview.</p>
                         <div class="download-buttons">
-                            <a href="download-resume.html" class="btn btn-primary" download>
+                            <a href="assets/resume/TranHuuDat-Resume-Summary.pdf" class="btn btn-primary" download>
                                 <i class="fas fa-download"></i> English Version
                             </a>
                             <a href="assets/resume/TranHuuDat-Resume-Summary-VN.pdf" class="btn btn-secondary" download>
